// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field Text has a helptext 1`] = `
<div>
  <div
    aria-labelledby="textField_fieldDetails"
    class="form-group hide"
    data-field-name="textField"
  >
    <div
      data-tooltip-align="top"
    >
      <input
        aria-describedby="textField_fieldHelp"
        aria-invalid="true"
        class="form-control ddm-field-text"
        id="textField"
        name="textField"
        type="text"
        value=""
      />
    </div>
    <input
      name="textField_edited"
      type="hidden"
      value="false"
    />
    <div
      aria-hidden="true"
      class="form-feedback-group lfr-de__field-feedback"
    >
      <div
        id="textField_fieldHelp"
      >
        Type something
      </div>
    </div>
    <span
      class="sr-only"
      id="textField_fieldDetails"
    >
      Type something
    </span>
  </div>
</div>
`;

exports[`Field Text has a label 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="textField"
  >
    <label
      aria-labelledby="textField_fieldDetails"
      class="ddm-label"
    >
      label
    </label>
    <div
      data-tooltip-align="top"
    >
      <input
        aria-invalid="true"
        class="form-control ddm-field-text"
        id="textField"
        name="textField"
        type="text"
        value=""
      />
    </div>
    <input
      name="textField_edited"
      type="hidden"
      value="false"
    />
    <span
      class="sr-only"
      id="textField_fieldDetails"
    >
      label
    </span>
  </div>
</div>
`;

exports[`Field Text has a placeholder 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="textField"
  >
    <div
      data-tooltip-align="top"
      title="Placeholder"
    >
      <input
        aria-invalid="true"
        class="form-control ddm-field-text"
        id="textField"
        name="textField"
        placeholder="Placeholder"
        type="text"
        value=""
      />
    </div>
    <input
      name="textField_edited"
      type="hidden"
      value="false"
    />
  </div>
</div>
`;

exports[`Field Text has a value 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="textField"
  >
    <div
      data-tooltip-align="top"
      title="value"
    >
      <input
        aria-invalid="true"
        class="form-control ddm-field-text"
        id="textField"
        name="textField"
        type="text"
        value="value"
      />
    </div>
    <input
      name="textField_edited"
      type="hidden"
      value="false"
    />
  </div>
</div>
`;

exports[`Field Text has an id 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="textField"
  >
    <div
      data-tooltip-align="top"
    >
      <input
        aria-invalid="true"
        class="form-control ddm-field-text"
        id="Id"
        name="textField"
        type="text"
        value=""
      />
    </div>
    <input
      name="textField_edited"
      type="hidden"
      value="false"
    />
  </div>
</div>
`;

exports[`Field Text is not readOnly 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="textField"
  >
    <div
      data-tooltip-align="top"
    >
      <input
        aria-invalid="true"
        class="form-control ddm-field-text"
        id="textField"
        name="textField"
        type="text"
        value=""
      />
    </div>
    <input
      name="textField_edited"
      type="hidden"
      value="false"
    />
  </div>
</div>
`;

exports[`Field Text is not required 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="textField"
  >
    <div
      data-tooltip-align="top"
    >
      <input
        aria-invalid="true"
        aria-required="false"
        class="form-control ddm-field-text"
        id="textField"
        name="textField"
        type="text"
        value=""
      />
    </div>
    <input
      name="textField_edited"
      type="hidden"
      value="false"
    />
  </div>
</div>
`;

exports[`Field Text is readOnly 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="textField"
  >
    <div
      data-tooltip-align="top"
    >
      <input
        aria-invalid="true"
        class="form-control ddm-field-text"
        disabled=""
        id="textField"
        name="textField"
        type="text"
        value=""
      />
    </div>
    <input
      name="textField_edited"
      type="hidden"
      value="false"
    />
  </div>
</div>
`;

exports[`Field Text renders Label if showLabel is true 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="textField"
  >
    <label
      aria-labelledby="textField_fieldDetails"
      class="ddm-label"
    >
      text
    </label>
    <div
      data-tooltip-align="top"
    >
      <input
        aria-invalid="true"
        class="form-control ddm-field-text"
        id="textField"
        name="textField"
        type="text"
        value=""
      />
    </div>
    <input
      name="textField_edited"
      type="hidden"
      value="false"
    />
    <span
      class="sr-only"
      id="textField_fieldDetails"
    >
      text
    </span>
  </div>
</div>
`;
